# luik

./: .env.example  .env.template  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  api.py  claude.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: docker-image.yml  run-pytest.yml
clients/: bytes_client.py  scheduler_client.py
clients/dependencies/: plugins.py
luik/: __main__.py  api.py  auth.py  config.py  logging.json  server.py
luik/clients/: boefje_runner_client.py  bytes_client.py  katalogus_client.py  octopoes_client.py  scheduler_client.py
luik/models/: api_models.py  db_models.py
tests/: conftest.py  test_luik.py  test_mock_katalogus_client.py  test_mock_scheduler_client.py
tests/mock_clients/: mock_boefje_runner_client.py  mock_katalogus_client.py  mock_octopoes_client.py  mock_scheduler_client.py
tests/mock_data/: mock_boefje_input.json  mock_pop_data.json
tests/tests/: test_luik.py  test_mock_scheduler_client.py
