[tool.mypy]
python_version = "3.10"
follow_imports = "silent"
plugins = ["pydantic.mypy"]
exclude = "tests/"
strict = true
disallow_any_unimported = true
no_implicit_optional = true

[tool.ruff.lint.isort]
split-on-trailing-comma = false

[tool.poetry]
name = "luik"
version = "0.1.0"
description = "An api for kittens to have a single endpoint to communicate with OpenKAT"
authors = ["Soufyan Abdellati <abdellatis149@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.5"
uvicorn = "^0.32.1"
httpx = "^0.27.2"
sqlalchemy = "^2.0.36"
psycopg2 = "^2.9.10"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
mypy = "^1.13.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
