[tool.mypy]
python_version = "3.10"
plugins = ["pydantic.mypy"]
strict = true
exclude = "tests/"

[tool.pytest.ini_options]
addopts = "-v"
env = [
    "OCTOPOES_API = http://a:1",
    "KATALOGUS_API = http://a:1",
    "SCHEDULER_API = http://a:1",
    "BOEFJE_RUNNER_API = http://a:1",
    "KATALOGUS_DB_URI = postgresql://a:1@b",
    "TOKEN_SECRET = 10a6e6cc8311a3e2bcc09bf6c199adecd5dd59408c343e926b129c4914f3cb01"
]

[tool.ruff.lint.isort]
split-on-trailing-comma = false

[tool.poetry]
name = "luik"
version = "0.2.0"
description = "An api for kittens to have a single endpoint to communicate with OpenKAT"
authors = ["Soufyan Abdellati <abdellatis149@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.116.1"
uvicorn = "^0.35.0"
httpx = "^0.28.1"
sqlalchemy = "^2.0.36"
psycopg2 = "^2.9.10"
structlog = "^24.4.0"
pydantic-settings = "^2.6.1"
pydantic = "^2.10.3"
passlib = "^1.7.4"
pyjwt = "^2.10.1"
python-multipart = "^0.0.20"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
mypy = "^1.13.0"
pytest-env = "^1.1.5"
types-passlib = "^1.7.7.20241221"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
