[project]
name = "luik"
version = "0.2.0"
description = "An api for kittens to have a single endpoint to communicate with OpenKAT"
authors = [{ name = "Soufyan Abdellati", email = "abdellatis149@gmail.com" }]
readme = "README.md"
dependencies = [
  "httpx>=0.28.1,<0.29.0",
  "fastapi>=0.120.2,<0.121.0",
  "pydantic>=2.12.3,<3.0.0",
  "pydantic-settings>=2.11.0,<3.0.0",
  "structlog>=25.5.0,<26.0.0",
  "uvicorn (>=0.38.0,<0.39.0)",
  "psycopg[binary] (>=3.2.0,<4.0.0)",
  "pyjwt (>=2.10.1,<3.0.0)",
  "sqlalchemy (>=2.0.44,<3.0.0)",
]
requires-python = ">=3.12"

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"

[tool.mypy]
python_version = "3.12"
plugins = ["pydantic.mypy"]
strict = true
exclude = "tests/"

[tool.pytest.ini_options]
addopts = "-v"
env = [
    "OCTOPOES_API = http://a:1",
    "KATALOGUS_API = http://a:1",
    "SCHEDULER_API = http://a:1",
    "BOEFJE_RUNNER_API = http://a:1",
    "KATALOGUS_DB_URI = postgresql://a:1@b",
    "TOKEN_SECRET = 10a6e6cc8311a3e2bcc09bf6c199adecd5dd59408c343e926b129c4914f3cb01"
]

[tool.ruff.lint.isort]
split-on-trailing-comma = false


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=8.4.2,<9.0.0)",
    "mypy (>=1.18.2,<2.0.0)",
    "pytest-env (>=1.2.0,<2.0.0)",
    "types-passlib (>=1.7.7.20250602,<2.0.0.0)"
]
